testsuites/LLT/compiler/Diagnose/lex_test/lex_unexpected_digit/case4.expect.out
error: expected decimal digit, found 'e'
  ==> case4.cj:14:13:
   | 
14 |     var a = 12eeeeeee
   |                ^ expected decimal digit
   | 

1 error generated, 1 error printed.
